--- a/Primark/Primark.csproj
+++ b/Primark/Primark.csproj
@@ -5,13 +5,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\Shopping Files\**" />
+    <Content Remove="wwwroot\Shopping Files\**" />
+    <EmbeddedResource Remove="wwwroot\Shopping Files\**" />
+    <None Remove="wwwroot\Shopping Files\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
     <PackageReference Include="System.Data.Common" Version="4.3.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\Shopping Files\" />
+    <Folder Include="wwwroot\Files\" />
   </ItemGroup>
 
 </Project>
